--- a/templates/scss/components/_icons.scss
+++ b/templates/scss/components/_icons.scss
@@ -121,4 +121,5 @@
     position: absolute;
     padding: 10px 12px;
     pointer-events: none;
+		left:0;
 }
