--- a/templates/scss/components/_minimized-tray.scss
+++ b/templates/scss/components/_minimized-tray.scss
@@ -1,3 +1,7 @@
+.minimized-profiles {
+   
+}
+
 ul.minimized-tray {
 list-style: none;
 margin-bottom: -5px;
