--- a/templates/scss/components/_navigation.scss
+++ b/templates/scss/components/_navigation.scss
@@ -55,14 +55,6 @@
     }
 }
 
-.marketing {
-    a {
-        color: $black;
-        font-size: 14px;
-        margin-top: 25px;
-        display: block;
-    }
-}
 
 .select-filter .fa {
       margin-left: 10px;
